# ocaml-stack-based-machine

./: .gitignore  .ocamlformat  README.md  dune-project  gullwing.opam
.github/workflows/: main.yml
lib/: dune  isa.ml  isa.mli  machine.ml  machine.mli  pipeline.ml  pipeline.mli  util.ml
test/: dune  test_gullwing.ml  test_triangle_execution.ml
test/samples/: triangle  triangle_iterative  triangle_tailrec
